# computer_setup

./: README.md  bootstrap.ps1  pyproject.toml
config/: config.json
src/computer_setup/: __init__.py  cli.py  config.py  security.py  sheets.py  state.py  windows.py
